fix: 1. remove uppercase 2. use overflow:hidden to make breadcrumb one line (#1626)

--- a/src/client/stylesheets/main.less
+++ b/src/client/stylesheets/main.less
@@ -568,10 +568,12 @@ span.ellipsis-text {
 }
 
 .wordwrap {
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -o-pre-wrap;
+  white-space: nowrap;
+  white-space: -moz-nowrap;
+  white-space: -o-nowrap;
   word-break: break-all;
+  text-overflow: clip;
+  overflow: hidden;
 }
 
 .bg-light {
